# AutoBias

./: .gitignore  .gitmodules  AutoBias.sln  CMakeLists.txt  README.md  todo.txt
AutoBias/: AutoBias.cpp  AutoBias.h  AutoBias.vcxproj  AutoBias.vcxproj.filters  CMakeLists.txt  bias_util.cpp  bias_util.h
AutoBias/generators/: LEDGenerator.cpp  LEDGenerator.h  LuminanceGenerator.h  MipGenerator.cpp  MipGenerator.h
AutoBias/include/: AutoBias.h  bias_util.h
AutoBias/include/generator/: LEDGenerator.h  LuminanceGenerator.h  MipGenerator.h
AutoBias/shaders/: color_correct.hlsl  compute_filter.hlsl  generate_mips.hlsl  led_calc.hlsl  led_filter.hlsl  luminance.hlsl  lut_generator.hlsl
AutoBias/src/: AutoBias.cpp  LEDGenerator.cpp  LuminanceGenerator.cpp  MipGenerator.cpp  bias_util.cpp
BiasViewer/: BiasViewer.cpp  BiasViewer.vcxproj  CppProps.props  Resource.h  ShaderCopy.props
D3D12Viewer/: CMakeLists.txt  D3D12Viewer.cpp  D3D12Viewer.vcxproj  D3D12Viewer.vcxproj.filters  LEDGenerator.cpp  LEDGenerator.h  LuminanceGenerator.cpp  MipGenerator.cpp  MipGenerator.h  Resource.h  bias_util.cpp  bias_util.h
D3D12Viewer/include/private/: Resource.h
D3D12Viewer/resources/: D3D12Viewer.rc
D3D12Viewer/shaders/: pixel.hlsl
D3D12Viewer/src/: D3D12Viewer.cpp
DesktopCapture/: CMakeLists.txt  CaptureManager.cpp  CaptureManager.h  DesktopCapture.vcxproj  DesktopCapture.vcxproj.filters  desktopcapture.h  dllmain.cpp  pch.h
DesktopCapture/include/: CaptureManager.h  pch.h
DesktopCapture/src/: CaptureManager.cpp
DesktopCapture/x64/Debug/: vc142.idb
DesktopCapture/x64/Debug/DesktopCapture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DesktopCapture.lastbuildstate  DesktopCapture.write.1u.tlog  link.15972.delete.1.tlog  link.31548.delete.1.tlog  link.34252.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DesktopCapture/x64/Release/DesktopCapture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DesktopCapture.lastbuildstate  DesktopCapture.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Generators/: LEDGenerator.cpp  LEDGenerator.h
Render/: CMakeLists.txt  Render.cpp  Render.h  Render.vcxproj  Render.vcxproj.filters
Render/include/: Render.h
Render/src/: Render.cpp
TestDevice/: CMakeLists.txt
TestDevice/include/: TestDevice.h
TestDevice/src/: TestDevice.cpp
generators/: LuminanceGenerator.h  MipGenerator.cpp  MipGenerator.h
include/: ArduinoControl.h
include/ArduinoControl/: ArduinoControl.h
lib/: ArduinoControl.lib
lib/Debug/: ArduinoControl.lib
lib/Release/: ArduinoControl.lib
resources/: weight-mask.dds
shaders/: color_correct.hlsl  compute_filter.hlsl  generate_mips.hlsl  led_calc.hlsl  luminance.hlsl  lut_generator.hlsl  pixel.hlsl  vertex.hlsl
shaders/compiled/: compute_filter.cso  pixel.cso  vertex.cso
